# scorpio_zadanie_rekrutacyjne_software

./: CMakeLists.txt  README.md  package.xml
src/: cube_detector_node.cpp  ilmenite_ratio.cpp
